--- a/src/app/components/chatbot/chat-header/chat-header.component.css
+++ b/src/app/components/chatbot/chat-header/chat-header.component.css
@@ -1,24 +1,67 @@
 .header {
   border: 1px solid #ccc;
-  width: 100%;
-  height: 10%;
   display: inline-block;
 }
 
 img {
-  padding: 1%;
-  width: 15%;
-  max-width: 100%;
+  margin: 1%;
   border-radius: 50%;
   float: left;
 }
 
 h1 {
-  width: 75%;
   float: right;
   font-size: 20px;
   color: #fff;
   padding: 2%;
+}
+
+@media (min-width: 320px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+
+  img {
+    width: 15%;
+    max-width: 100%;
+  }
+
+  h1 {
+    width: 75%;
+  }
+}
+
+@media (min-width: 411px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+
+  img {
+    width: 15%;
+    max-width: 100%;
+  }
+
+  h1 {
+    width: 75%;
+  }
+}
+
+@media (min-width: 481px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+
+  img {
+    width: 15%;
+    max-width: 100%;
+  }
+
+  h1 {
+    width: 75%;
+  }
 }
 
 @media (min-width: 600px) {
@@ -28,11 +71,44 @@ h1 {
   }
 
   img {
-    padding: 1%;
-    width: 11%;
+    width: 15%;
     max-width: 100%;
-    border-radius: 50%;
-    float: left;
+  }
+
+  h1 {
+    width: 75%;
+  }
+}
+
+@media (min-width: 769px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+
+  img {
+    width: 15%;
+    max-width: 100%;
+  }
+
+  h1 {
+    width: 75%;
+  }
+}
+
+@media (min-width: 1260px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+
+  img {
+    width: 15%;
+    max-width: 100%;
+  }
+
+  h1 {
+    width: 75%;
   }
 }
 
@@ -43,10 +119,11 @@ h1 {
   }
 
   img {
-    padding: 1%;
-    width: 11%;
+    width: 15%;
     max-width: 100%;
-    border-radius: 50%;
-    float: left;
+  }
+
+  h1 {
+    width: 75%;
   }
 }
