Improving mobile-first

--- a/src/app/components/chatbot/chat-header/chat-header.component.html
+++ b/src/app/components/chatbot/chat-header/chat-header.component.html
@@ -1,4 +1,6 @@
 <div class="header" [ngStyle]="{ backgroundColor: bankColor }">
-  <img src="{{ bankDpUrl }}" />
-  <h1>{{ bankName }}</h1>
+  <div class="profilePic"><img src="{{ bankDpUrl }}" /></div>
+  <div class="title">
+    <h1>{{ bankName }}</h1>
+  </div>
 </div>
