--- a/src/app/components/chatbot/chat-header/chat-header.component.css
+++ b/src/app/components/chatbot/chat-header/chat-header.component.css
@@ -4,31 +4,35 @@
 }
 
 img {
-  margin: 1%;
+  width: 80%;
+  height: 80%;
+  margin: 10%;
   border-radius: 50%;
-  float: left;
 }
 
 h1 {
-  float: right;
+  float: left;
   font-size: 20px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: #fff;
-  padding: 2%;
+}
+
+.profilePic {
+  width: 20%;
+  height: 100%;
+  float: left;
+}
+
+.title {
+  width: 80%;
+  height: 100%;
+  float: right;
 }
 
 @media (min-width: 320px) {
   .header {
     width: 100%;
     height: 10%;
-  }
-
-  img {
-    width: 15%;
-    max-width: 100%;
-  }
-
-  h1 {
-    width: 75%;
   }
 }
 
@@ -37,30 +41,12 @@ h1 {
     width: 100%;
     height: 10%;
   }
-
-  img {
-    width: 15%;
-    max-width: 100%;
-  }
-
-  h1 {
-    width: 75%;
-  }
 }
 
 @media (min-width: 481px) {
   .header {
     width: 100%;
     height: 10%;
-  }
-
-  img {
-    width: 15%;
-    max-width: 100%;
-  }
-
-  h1 {
-    width: 75%;
   }
 }
 
@@ -69,30 +55,12 @@ h1 {
     width: 100%;
     height: 10%;
   }
-
-  img {
-    width: 15%;
-    max-width: 100%;
-  }
-
-  h1 {
-    width: 75%;
-  }
 }
 
-@media (min-width: 769px) {
+@media (min-width: 768px) {
   .header {
     width: 100%;
     height: 10%;
-  }
-
-  img {
-    width: 15%;
-    max-width: 100%;
-  }
-
-  h1 {
-    width: 75%;
   }
 }
 
@@ -101,29 +69,11 @@ h1 {
     width: 100%;
     height: 10%;
   }
-
-  img {
-    width: 15%;
-    max-width: 100%;
-  }
-
-  h1 {
-    width: 75%;
-  }
 }
 
 @media (min-width: 1281px) {
   .header {
     width: 100%;
     height: 10%;
-  }
-
-  img {
-    width: 15%;
-    max-width: 100%;
-  }
-
-  h1 {
-    width: 75%;
   }
 }
