--- a/src/app/components/chatbot/chat-header/chat-header.component.css
+++ b/src/app/components/chatbot/chat-header/chat-header.component.css
@@ -15,11 +15,22 @@ img {
 }
 
 h1 {
-  width: 75%;
-  float: right;
+  width: 50%;
+  float: left;
   font-size: 20px;
   color: #fff;
   padding: 2%;
+}
+
+h3 {
+  color: #fff;
+  margin-top: 3%;
+  font-size: 16px;
+}
+
+p {
+  color: #fff;
+  font-size: 12px;
 }
 
 @media (min-width: 600px) {
