--- a/src/app/components/chatbot/chat-header/chat-header.component.html
+++ b/src/app/components/chatbot/chat-header/chat-header.component.html
@@ -3,4 +3,6 @@
     src="https://pbs.twimg.com/profile_images/960529625188220928/hDC7W9eq_400x400.jpg"
   />
   <h1>US Bank</h1>
+  <h3>John Doe</h3>
+  <p>Pts: 12000</p>
 </div>
