--- a/src/app/components/chatbot/chat-header/chat-header.component.css
+++ b/src/app/components/chatbot/chat-header/chat-header.component.css
@@ -13,7 +13,17 @@ img {
 h1 {
   float: left;
   font-size: 20px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: arial;
+  color: #fff;
+}
+
+h3 {
+  font-size: 16px;
+  color: #fff;
+}
+
+p {
+  font-size: 12px;
   color: #fff;
 }
 
@@ -24,7 +34,13 @@ h1 {
 }
 
 .title {
-  width: 80%;
+  width: 60%;
+  height: 100%;
+  float: left;
+}
+
+.points {
+  width: 20%;
   height: 100%;
   float: right;
 }
