--- a/src/app/components/chatbot/chat-body/choice-button/choice-button.component.css
+++ b/src/app/components/chatbot/chat-body/choice-button/choice-button.component.css
@@ -1,10 +1,23 @@
 button {
-    padding: 2%;
-    margin: 1% 0% 1% 7%;
-    display: block;
-    background: #007bff none repeat scroll 0 0;
-    color: #fff;
-    border-radius: 5px;
-    border: 0px;
-    font-size: 14px;
+  padding: 2%;
+  margin: 1% 0% 1% 7%;
+  display: block;
+  background: #fff none repeat scroll 0 0;
+  color: lightskyblue;
+  border-radius: 20%;
+  border-color: lightskyblue;
+  border: 1px;
+  font-size: 14px;
+}
+
+button:hover {
+  padding: 2%;
+  margin: 1% 0% 1% 7%;
+  display: block;
+  background: lightskyblue none repeat scroll 0 0;
+  color: #fff;
+  border-radius: 20%;
+  border-color: lightskyblue;
+  border: 1px;
+  font-size: 14px;
 }
