--- a/src/app/components/chatbot/chat-header/chat-header.component.css
+++ b/src/app/components/chatbot/chat-header/chat-header.component.css
@@ -15,6 +15,7 @@ h1 {
   font-size: 20px;
   font-family: arial;
   color: #fff;
+  margin: 12%;
 }
 
 h3 {
@@ -34,15 +35,16 @@ p {
 }
 
 .title {
-  width: 60%;
+  width: 50%;
   height: 100%;
   float: left;
 }
 
 .points {
-  width: 20%;
-  height: 100%;
+  width: 26%;
+  height: 80%;
   float: right;
+  padding: 2%;
 }
 
 @media (min-width: 320px) {
