--- a/src/app/components/chatbot/chat-body/choice-button/choice-button.component.css
+++ b/src/app/components/chatbot/chat-body/choice-button/choice-button.component.css
@@ -1,10 +1,19 @@
 button {
     padding: 2%;
     margin: 1% 0% 1% 7%;
-    display: block;
+    background: #fff none repeat scroll 0 0;
+    color: #007bff;
+    border-radius: 7px;
+    border: 3px;
+    border-style: solid;
+    border-color:#007bff ;
+    font-size: 14px;
+    cursor: pointer;
+    box-shadow: 2px 3px #007bff
+}
+
+button:hover{
     background: #007bff none repeat scroll 0 0;
     color: #fff;
-    border-radius: 5px;
-    border: 0px;
-    font-size: 14px;
+    box-shadow: 0px 0px #007bff
 }
