--- a/src/app/components/chatbot/chat-body/text-bubble/text-bubble.component.css
+++ b/src/app/components/chatbot/chat-body/text-bubble/text-bubble.component.css
@@ -5,34 +5,35 @@
 
 .user {
   float: right;
-  width: 50%;
+  max-width: 50%;
   margin-right: 7%;
+  padding: 2%;
 }
 
 .user p {
   background: #007bff none repeat scroll 0 0;
   color: #fff;
-  border-radius: 10px;
-  font-size: 14px;
+  border-radius: 15px 0px 15px 15px;
+  font-size: 16px;
   margin: 0;
   color: #fff;
-  padding: 5px 10px 5px 12px;
+  padding: 10px 10px 10px 10px;
   width: 100%;
 }
 
 .bot {
   float: left;
-  width: 50%;
+  max-width: 50%;
   margin-left: 2%;
 }
 
 .bot p {
   background: #efefef none repeat scroll 0 0;
-  color: #646464;
-  border-radius: 10px;
-  font-size: 14px;
+  color: #414141;
+  border-radius: 0px 15px 15px 15px;
+  font-size: 16px;
   margin: 0;
-  padding: 5px 10px 5px 12px;
+  padding: 10px 10px 10px 10px;
   width: 100%;
 }
 .time {
