--- a/src/app/components/chatbot/chat-body/choice-button/choice-button.component.css
+++ b/src/app/components/chatbot/chat-body/choice-button/choice-button.component.css
@@ -4,12 +4,12 @@ button {
     background: #fff none repeat scroll 0 0;
     color: #007bff;
     border-radius: 7px;
-    border: 3px;
+    border: 2px;
     border-style: solid;
     border-color:#007bff ;
     font-size: 14px;
     cursor: pointer;
-    box-shadow: 2px 3px #007bff
+    box-shadow: 1px 2px #8d8d8d
 }
 
 button:hover{
