--- a/src/app/components/chatbot/chatbot.component.html
+++ b/src/app/components/chatbot/chatbot.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <app-chat-header></app-chat-header>
+  <app-header></app-header>
   <app-chat-body></app-chat-body>
   <app-chat-input></app-chat-input>
 </div>
