Header made fully responsive

--- a/src/app/components/chatbot/chat-body/text-bubble/text-bubble.component.html
+++ b/src/app/components/chatbot/chat-body/text-bubble/text-bubble.component.html
@@ -1,5 +1,5 @@
 <div class="text-bubble-container">
-  <div class="{{ textType }}">
+  <div class="{{ sentBy }}">
     <p>{{ text }}</p>
     <!--span class="time">09:55 PM | October 10 2019</span-->
   </div>
