--- a/src/app/components/chatbot/chat-input/chat-input.component.css
+++ b/src/app/components/chatbot/chat-input/chat-input.component.css
@@ -1,9 +1,14 @@
 .input-block {
-  width: 100%;
-  height: 8%;
+  border: 1px solid #ccc;
   display: inline-block;
   background-color: #007bff;
-  padding: 1px;
+  min-height: 60px;
+}
+
+.textInput {
+  width: auto;
+  height: 100%;
+  float: left;
 }
 
 input {
@@ -11,10 +16,10 @@ input {
   font-size: 17px;
   border-radius: 20px;
   border: none;
-  width: 70%;
+  width: 100%;
   height: 50%;
   margin: 2%;
-  padding: 5px;
+  padding: 2%;
 }
 
 button {
@@ -27,4 +32,164 @@ button {
   background-color: white;
   color: #007bff;
   padding: 5px;
+}
+
+@media (min-width: 320px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 130%;
+  }
+  .username {
+    font-size: 100%;
+  }
+  .points {
+    font-size: 70%;
+  }
+}
+
+@media (min-width: 411px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 150%;
+  }
+  .username {
+    font-size: 120%;
+  }
+  .points {
+    font-size: 90%;
+  }
+}
+
+@media (min-width: 481px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 150%;
+  }
+  .username {
+    font-size: 120%;
+  }
+  .points {
+    font-size: 90%;
+  }
+}
+
+@media (min-width: 600px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 170%;
+  }
+  .username {
+    font-size: 140%;
+  }
+  .points {
+    font-size: 110%;
+  }
+}
+
+@media (min-width: 768px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 200%;
+  }
+  .username {
+    font-size: 150%;
+  }
+  .points {
+    font-size: 120%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 250%;
+  }
+  .username {
+    font-size: 200%;
+  }
+  .points {
+    font-size: 170%;
+  }
+}
+
+@media (min-width: 1260px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 250%;
+  }
+  .username {
+    font-size: 200%;
+  }
+  .points {
+    font-size: 170%;
+  }
+}
+
+@media (min-width: 1281px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 250%;
+  }
+  .username {
+    font-size: 200%;
+  }
+  .points {
+    font-size: 170%;
+  }
+}
+
+@media (min-width: 1600px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 250%;
+  }
+  .username {
+    font-size: 200%;
+  }
+  .points {
+    font-size: 170%;
+  }
+}
+
+@media (min-width: 1920px) {
+  .input-block {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 250%;
+  }
+  .username {
+    font-size: 150%;
+  }
+  .points {
+    font-size: 100%;
+  }
 }
