--- a/src/app/components/chatbot/chatbot.component.css
+++ b/src/app/components/chatbot/chatbot.component.css
@@ -53,3 +53,17 @@
     height: 100%;
   }
 }
+
+@media (min-width: 1600px) {
+  .container {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (min-width: 1920px) {
+  .container {
+    width: 100%;
+    height: 100%;
+  }
+}
