--- a/src/app/modules/header/header.component.css
+++ b/src/app/modules/header/header.component.css
@@ -1,36 +1,110 @@
 .header {
   border: 1px solid #ccc;
-  width: 100%;
-  height: 10%;
   display: inline-block;
   background-color: #007bff;
+  min-height: 60px;
+}
+
+.profilePic {
+  width: auto;
+  height: 100%;
+  float: left;
 }
 
 img {
-  padding: 1%;
-  width: 15%;
-  max-width: 100%;
+  max-width: 90%;
+  max-height: 90%;
+  margin: 10%;
   border-radius: 50%;
+}
+
+.title {
+  width: auto;
+  height: 100%;
+  margin-left: 5%;
   float: left;
+  display: table;
 }
 
-h1 {
-  width: 50%;
-  float: left;
-  font-size: 20px;
+.bankName {
+  max-width: 90%;
+  max-height: 90%;
+  margin: 10%;
+  font-family: arial;
   color: #fff;
-  padding: 2%;
+  display: table-cell;
+  vertical-align: middle;
 }
 
-h3 {
-  color: #fff;
-  margin-top: 3%;
-  font-size: 16px;
+p {
+  margin: 0%;
 }
 
-h4 {
+.details {
+  width: auto;
+  height: 100%;
+  margin-right: 5%;
+  float: right;
+  display: table;
+  text-align: center;
+}
+
+.user-details {
+  max-width: 90%;
+  max-height: 90%;
+  margin: 10%;
+  font-family: arial;
   color: #fff;
-  font-size: 12px;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+@media (min-width: 320px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 130%;
+  }
+  .username {
+    font-size: 100%;
+  }
+  .points {
+    font-size: 70%;
+  }
+}
+
+@media (min-width: 411px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 150%;
+  }
+  .username {
+    font-size: 120%;
+  }
+  .points {
+    font-size: 90%;
+  }
+}
+
+@media (min-width: 481px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 150%;
+  }
+  .username {
+    font-size: 120%;
+  }
+  .points {
+    font-size: 90%;
+  }
 }
 
 @media (min-width: 600px) {
@@ -38,13 +112,62 @@ h4 {
     width: 100%;
     height: 10%;
   }
+  .bankName {
+    font-size: 170%;
+  }
+  .username {
+    font-size: 140%;
+  }
+  .points {
+    font-size: 110%;
+  }
+}
 
-  img {
-    padding: 1%;
-    width: 11%;
-    max-width: 100%;
-    border-radius: 50%;
-    float: left;
+@media (min-width: 768px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 200%;
+  }
+  .username {
+    font-size: 150%;
+  }
+  .points {
+    font-size: 120%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 250%;
+  }
+  .username {
+    font-size: 200%;
+  }
+  .points {
+    font-size: 170%;
+  }
+}
+
+@media (min-width: 1260px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 250%;
+  }
+  .username {
+    font-size: 200%;
+  }
+  .points {
+    font-size: 170%;
   }
 }
 
@@ -53,12 +176,45 @@ h4 {
     width: 100%;
     height: 10%;
   }
+  .bankName {
+    font-size: 250%;
+  }
+  .username {
+    font-size: 200%;
+  }
+  .points {
+    font-size: 170%;
+  }
+}
 
-  img {
-    padding: 1%;
-    width: 11%;
-    max-width: 100%;
-    border-radius: 50%;
-    float: left;
+@media (min-width: 1600px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 250%;
+  }
+  .username {
+    font-size: 200%;
+  }
+  .points {
+    font-size: 170%;
+  }
+}
+
+@media (min-width: 1920px) {
+  .header {
+    width: 100%;
+    height: 10%;
+  }
+  .bankName {
+    font-size: 250%;
+  }
+  .username {
+    font-size: 150%;
+  }
+  .points {
+    font-size: 100%;
   }
 }
