--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -1,8 +1,19 @@
 <div class="header">
-  <img
-    src="https://pbs.twimg.com/profile_images/960529625188220928/hDC7W9eq_400x400.jpg"
-  />
-  <h1>US Bank</h1>
-  <h3>John Doe</h3>
-  <h4>Points: 12000</h4>
+  <div class="profilePic">
+    <img
+      src="https://pbs.twimg.com/profile_images/960529625188220928/hDC7W9eq_400x400.jpg"
+    />
+  </div>
+  <div class="title">
+    <div class="bankName">
+      <p><strong>US Bank</strong></p>
+    </div>
+  </div>
+  <div class="details">
+    <div class="user-details">
+      <span class="username"><strong>John Doe</strong></span
+      ><br />
+      <span class="points">Points: 12000</span>
+    </div>
+  </div>
 </div>
