--- a/src/app/components/chatbot/chat-input/chat-input.component.html
+++ b/src/app/components/chatbot/chat-input/chat-input.component.html
@@ -7,9 +7,9 @@
       (keydown.enter)="SendUserInput()"
     />
   </div>
-  <div class="send">
+  <!--<div class="send">
     <button (click)="SendUserInput()">
       Send
     </button>
-  </div>
+  </div>-->
 </div>
