--- a/src/app/components/chatbot/chatbot.component.html
+++ b/src/app/components/chatbot/chatbot.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="ccontainer">
   <app-header></app-header>
   <app-chat-body></app-chat-body>
   <app-chat-input></app-chat-input>
