--- a/src/app/components/chatbot/chat-body/carousel/carousel.component.css
+++ b/src/app/components/chatbot/chat-body/carousel/carousel.component.css
@@ -1,11 +1,17 @@
 .carousel-continer, .slide{
     background-color: #fff;
     min-height: 200px;
-    width: 90%;
+    max-width: 400px;
+    width: 80%;
     margin: auto;
     border-radius: 10px 10px 10px 10px;
     height: auto;
     overflow: hidden;
+    margin-right: auto;
+}
+.carousel-continer{
+display: block;
+margin-left: 2%;;
 }
 
 .slide-card{
