--- a/src/app/modules/card/card.component.css
+++ b/src/app/modules/card/card.component.css
@@ -1,23 +1,29 @@
 .card {
   width: 70%;
-  min-height: 400px;
+  max-width: 300px;
+  min-height: 350px;
   border-radius: 20px;
-  margin: 2%;
+  border: none;
   height: auto;
   overflow: hidden;
   background-color: #efefef;
+  margin-left: 5%;
+  margin-top: 2%;
 }
 
-.restaurantImage {
+.carousel-container {
   width: 100%;
-  height: 58%;
 }
 
 img {
-  border-radius: 20px 20px 0px 0px;
+  border-radius: 10px 10px 0px 0px;
   width: 100%;
-  height: 100%;
+  height: 180px;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  object-fit: fill;
 }
 
 .restaurantInfo {
@@ -25,7 +31,7 @@ img {
   height: 37%;
 }
 
-.line1 {
+.name-rating {
   width: 100%;
   height: auto;
   float: left;
@@ -33,7 +39,7 @@ img {
 
 .restaurantName {
   font-family: arial;
-  font-size: 22px;
+  font-size: 18px;
   display: block;
   float: left;
   margin: 0%;
@@ -53,9 +59,9 @@ img {
   background-color: #099e44;
   text-align: center;
   margin: 2%;
-  padding: 2%;
-  padding-left: 3%;
-  padding-right: 5%;
+  padding: 1%;
+  padding-left: 2%;
+  padding-right: 4%;
   color: #fff;
 }
 
@@ -68,26 +74,21 @@ p {
   font-size: 14px;
 }
 
-.line2 {
+.address {
   float: left;
   clear: both;
   color: #575757;
   margin: 2%;
 }
 
-.line3 {
+.cuisines {
   float: left;
   clear: both;
   color: #575757;
   margin: 2%;
 }
 
-.line3 h4 {
-  margin-top: 5%;
-  margin-bottom: 0%;
-}
-
-.line4 {
+.price {
   font-family: arial;
   float: left;
   clear: both;
@@ -95,25 +96,56 @@ p {
   margin: 2%;
 }
 
-.line4 h4 {
-  margin-top: 1%;
-  margin-bottom: 5%;
-}
-
-.line5 {
+.proceed-button {
   font-family: arial;
-  width: 100%;
+  width: 90%;
   text-align: center;
   clear: both;
+  margin: 5%;
 }
 
-.line5 button {
+.proceed-button button {
   background-color: #007bff;
   color: #fff;
   padding: 3%;
   padding-left: 7%;
   padding-right: 7%;
-  font-size: 100%;
-  border-radius: 20px;
+  border-radius: 10px;
+  font-size: 16px;
   border: none;
+  margin-top: 5%;
+}
+
+.browse-button {
+  font-family: arial;
+  width: 90%;
+  text-align: center;
+  clear: both;
+  margin: 5%;
+}
+
+.browse-button button {
+  background-color: gray;
+  color: #fff;
+  padding: 1%;
+  padding-left: 10%;
+  padding-right: 10%;
+  font-size: 14px;
+  border-radius: 10px;
+  border: none;
+}
+
+::ng-deep .carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000000' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
+}
+
+::ng-deep .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+::ng-deep .carousel-indicators li {
+  background-color: #efefef;
+}
+::ng-deep .carousel-indicators .active {
+  background-color: #575757;
 }
