--- a/src/app/modules/card/card.component.html
+++ b/src/app/modules/card/card.component.html
@@ -5,7 +5,7 @@
       [interval]="false"
       [itemsPerSlide]="1"
     >
-      <slide *ngFor="let slide of slides" class="slide">
+      <slide *ngFor="let slide of data.slides" class="slide">
         <img [src]="slide" alt="image slide" class="restaurant-image" />
       </slide>
     </carousel>
@@ -13,28 +13,28 @@
   <div class="restaurantInfo">
     <div class="name-rating">
       <h1 class="restaurantName">
-        <b>{{ restaurantName }}</b>
+        <b>{{ data.restaurantName }}</b>
       </h1>
       <div class="ratings">
         <p>
-          <b> &#9734; &nbsp;{{ userRating }}</b>
+          <b> &#9734; &nbsp;{{ data.userRating }}</b>
         </p>
       </div>
     </div>
 
     <div class="address">
-      <p>{{ restaurantAddress }}</p>
+      <p>{{ data.restaurantAddress }}</p>
     </div>
 
     <div class="cuisines">
       <p>
-        Cuisines : <b>{{ cuisines }}</b>
+        Cuisines : <b>{{ data.cuisines }}</b>
       </p>
     </div>
 
     <div class="price">
       <p>
-        Price Per Person : <b>{{ pricePerPerson }}</b>
+        Price Per Person : <b>{{ data.pricePerPerson }}</b>
       </p>
     </div>
 
