--- a/src/app/components/chatbot/chat-body/carousel/carousel.component.html
+++ b/src/app/components/chatbot/chat-body/carousel/carousel.component.html
@@ -3,21 +3,21 @@
     [interval] = false
     [itemsPerSlide]=1
     class="carousel">
-    <slide *ngFor="let slide of slides; let index=index" class= "slide"> 
+    <slide *ngFor="let slide of data; let index=index" class= "slide"> 
       <a >
           <div class="slide-card">
               <div class="slide-image-container">
-                  <img [src]="slide.image" alt="image slide">
+                  <img [src]="slide.thumbURL" alt="image slide" onError="this.src='https://icon-library.net/images/no-image-available-icon/no-image-available-icon-6.jpg';"  >
               </div>
               <div class="slide-text-container">
                   <div class="slide-name">
-                      <h1><b>{{slide["restaurantName"]}}</b></h1>
+                      <h1><b>{{slide["restarauntName"]}}</b></h1>
                   </div>
                   <div class="slide-data">
                       <div class="ratings">
-                        <p><b> &#9734;&nbsp;{{slide["userRatings"]}}</b></p>
+                        <p><b> &#9734;&nbsp;{{slide["user_Rating"]}}</b></p>
                       </div>
-                      <p>{{slide["locality"]}}</p>
+                      <p>{{slide["restarauntAddress"]}}</p>
                       <div class="button-div">
                         <button (click)="showDetails(index)" class="see-details-button">See More Details</button>
                       </div>
