--- a/src/app/modules/card/card.component.css
+++ b/src/app/modules/card/card.component.css
@@ -31,8 +31,8 @@ img {
   height: 37%;
 }
 
-.name-rating {
-  width: 100%;
+.name {
+  width: 70%;
   height: auto;
   float: left;
 }
@@ -47,12 +47,17 @@ img {
   margin: 2%;
 }
 
+.rating-view {
+  width: 70%;
+  float: left;
+}
+
 .ratings p {
   color: #fff;
   font-size: 14px;
 }
 .ratings {
-  float: right;
+  float: left;
   border-radius: 5px;
   display: block;
   border-color: #099e44;
@@ -63,6 +68,13 @@ img {
   padding-left: 2%;
   padding-right: 4%;
   color: #fff;
+}
+
+.map {
+  float: right;
+  display: block;
+  height: 50px;
+  width: 50px;
 }
 
 h2 {
