--- a/src/app/components/chatbot/chat-body/carousel/carousel.component.html
+++ b/src/app/components/chatbot/chat-body/carousel/carousel.component.html
@@ -11,13 +11,13 @@
               </div>
               <div class="slide-text-container">
                   <div class="slide-name">
-                      <h1><b>{{slide["restarauntName"]}}</b></h1>
+                      <h1><b>{{slide["restaurantName"]}}</b></h1>
                   </div>
                   <div class="slide-data">
                       <div class="ratings">
                         <p><b> &#9734;&nbsp;{{slide["user_Rating"]}}</b></p>
                       </div>
-                      <p>{{slide["restarauntAddress"]}}</p>
+                      <p>{{slide["localityVerbose"]}}</p>
                       <div class="button-div">
                         <button (click)="showDetails(index)" class="see-details-button">See More Details</button>
                       </div>
