--- a/src/app/modules/card/card.component.css
+++ b/src/app/modules/card/card.component.css
@@ -1,7 +1,7 @@
 .card {
   width: 70%;
   max-width: 300px;
-  min-height: 350px;
+  min-height: 300px;
   border-radius: 20px;
   border: none;
   height: auto;
@@ -9,6 +9,7 @@
   background-color: #efefef;
   margin-left: 5%;
   margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 .carousel-container {
@@ -27,7 +28,7 @@ img {
 }
 
 .restaurantInfo {
-  margin: 5%;
+  margin: 3%;
   height: 37%;
 }
 
@@ -44,7 +45,6 @@ img {
   float: left;
   margin: 0%;
   color: #cb202d;
-  margin: 2%;
 }
 
 .rating-view {
@@ -84,6 +84,8 @@ h2 {
 p {
   margin: 0%;
   font-size: 14px;
+  letter-spacing: 0px;
+  width: 100%;
 }
 
 .address {
@@ -119,11 +121,11 @@ p {
 .proceed-button button {
   background-color: #007bff;
   color: #fff;
-  padding: 3%;
+  padding: 2%;
   padding-left: 7%;
   padding-right: 7%;
   border-radius: 10px;
-  font-size: 16px;
+  font-size: 14px;
   border: none;
   margin-top: 5%;
 }
@@ -142,7 +144,7 @@ p {
   padding: 1%;
   padding-left: 10%;
   padding-right: 10%;
-  font-size: 14px;
+  font-size: 12px;
   border-radius: 10px;
   border: none;
 }
