restaurant details card functionality updated - now opens map in a new tab

--- a/src/app/modules/card/card.component.html
+++ b/src/app/modules/card/card.component.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="map">
-      <a href="https://maps.google.com/?q={{ data['lat'] }},{{ data['lon'] }}"
+      <a href="https://maps.google.com/?q={{ data['lat'] }},{{ data['lon'] }}" target="_blank"
         ><img
           style="width: 40px; height:40px;"
           src="https://cdn1.imggmi.com/uploads/2019/10/24/306122ba2ef5fce323452f18e56ae49a-full.png"
