Added loader while fetching the details from api

--- a/src/app/components/chatbot/chat-body/chat-body.component.html
+++ b/src/app/components/chatbot/chat-body/chat-body.component.html
@@ -1,3 +1,6 @@
 <div class="msg-page" id="msg-page">
   <ng-template #chatContainer></ng-template>
+  <div class="app-loader">
+    <app-loader></app-loader>
+  </div>
 </div>
