--- a/src/app/components/chatbot/chat-body/chat-body.component.css
+++ b/src/app/components/chatbot/chat-body/chat-body.component.css
@@ -5,3 +5,13 @@
   border: 1px solid #ccc;
   display: block;
 }
+
+.app-loader{
+  position: fixed;
+  padding-left: 35%;
+  padding-right: 35%;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  width: 100%;
+  bottom: 10%;
+}
