--- a/src/app/components/chatbot/chat-body/chat-body.component.html
+++ b/src/app/components/chatbot/chat-body/chat-body.component.html
@@ -1,7 +1,6 @@
 <div class="msg-page" id="msg-page">
-  <app-carousel></app-carousel>
   <ng-template #chatContainer></ng-template>
-  <!--<div class="app-loader">
+  <div class="app-loader">
     <app-loader></app-loader>
-  </div>-->
+  </div>
 </div>
