--- a/src/app/modules/carousel/carousel.component.css
+++ b/src/app/modules/carousel/carousel.component.css
@@ -1,17 +1,19 @@
 .carousel-container {
-  height: 60%;
+  width: 100%;
+  height: 50%;
+  margin: 5% 0%;
   white-space: nowrap;
   overflow-y: hidden;
   overflow-x: auto;
 }
 
 .slide {
-  width: 90%;
+  width: 75%;
   height: 90%;
   display: inline-block;
   white-space: normal;
   background-color: #fff;
-  margin: 5% 5%;
+  margin: 5% 3%;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px, rgba(0, 0, 0, 0.04) 0px 6px 6px;
 }
 
@@ -39,38 +41,55 @@
   position: relative;
   width: 100%;
   height: 30%;
-  margin-top: 5%;
+  margin-top: 3%;
   letter-spacing: 0px;
 }
 
+.slide-name {
+  height: 35%;
+  text-align: left;
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .slide-name h1 {
   font-size: 16px;
   padding: 0;
   color: #000000;
   margin: 0;
-  text-align: left;
-  display: block;
-  overflow: hidden;
   font-family: Arial, Helvetica, sans-serif;
   letter-spacing: 0px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   -webkit-font-smoothing: antialiased;
   line-height: 24px;
 }
 
+.locality {
+  height: 25%;
+  text-align: left;
+  display: block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 .locality p {
   font-size: 14px;
   letter-spacing: 0px;
   padding: 0;
   margin: 0;
-  text-align: left;
-  display: block;
   color: #545454;
-  text-overflow: ellipsis;
-  white-space: nowrap;
   line-height: 16px;
   -webkit-font-smoothing: antialiased;
+}
+
+.rating {
+  height: 38%;
+  display: inline-flex;
+  background-color: #f6f6f6;
+  align-items: center;
+  padding: 1px 6px;
+  margin-top: 2%;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
 }
 
 .rating p {
@@ -78,12 +97,21 @@
   font-size: 14px;
   margin: 0;
 }
-.rating {
+
+.pricePerPerson {
+  height: 38%;
   display: inline-flex;
   background-color: #f6f6f6;
   align-items: center;
-  padding: 2px 8px;
+  padding: 1px 6px;
   margin-top: 2%;
+  margin-right: 3%;
   -webkit-box-pack: justify;
   justify-content: space-between;
+}
+
+.pricePerPerson p {
+  color: #000000;
+  font-size: 14px;
+  margin: 0;
 }
