--- a/src/app/modules/carousel/carousel.component.html
+++ b/src/app/modules/carousel/carousel.component.html
@@ -18,9 +18,7 @@
           <p>{{ slide["localityVerbose"] }}</p>
         </div>
         <div class="pricePerPerson">
-          <p>
-            $500 per person
-          </p>
+          <p>${{ slide["pricePerHead"] }} per person</p>
         </div>
         <div class="rating">
           <p>
