--- a/src/app/modules/card/card.component.css
+++ b/src/app/modules/card/card.component.css
@@ -1,165 +1,208 @@
-.card {
-  width: 70%;
-  max-width: 300px;
-  min-height: 300px;
-  border-radius: 20px;
-  border: none;
+.card-container {
+  width: 90%;
   height: auto;
-  overflow: hidden;
-  background-color: #efefef;
-  margin-left: 5%;
-  margin-top: 2%;
-  margin-bottom: 2%;
+  margin: 3% 5%;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px, rgba(0, 0, 0, 0.04) 0px 6px 6px;
+  display: flex;
+  background-color: #fff;
 }
 
-.carousel-container {
-  width: 100%;
+.card {
+  width: 96%;
+  height: 96%;
+  margin: 2% 2%;
+  border: none;
 }
 
-img {
-  border-radius: 10px 10px 0px 0px;
+.image-gallery {
   width: 100%;
   height: 180px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
+  white-space: nowrap;
+  overflow-y: hidden;
+  overflow-x: auto;
+}
+
+.image-container {
+  width: auto;
+  height: 96%;
+  margin: 1% 0%;
+  margin-right: 6%;
+  display: inline-block;
+  white-space: normal;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px, rgba(0, 0, 0, 0.04) 0px 6px 6px;
+}
+
+.image {
+  width: 94%;
+  height: 94%;
+  margin: 2% 3%;
+}
+
+.image img {
+  width: 100%;
+  height: 100%;
   object-fit: fill;
 }
 
 .restaurantInfo {
-  margin: 3%;
-  height: 37%;
-}
-
-.name {
-  width: 70%;
+  width: 100%;
   height: auto;
-  float: left;
+  margin: 5% 0%;
 }
 
 .restaurantName {
-  font-family: arial;
-  font-size: 18px;
-  display: block;
-  float: left;
-  margin: 0%;
-  color: #cb202d;
-}
-
-.rating-view {
-  width: 70%;
-  float: left;
-}
-
-.ratings p {
-  color: #fff;
-  font-size: 14px;
-}
-.ratings {
-  float: left;
-  border-radius: 5px;
-  display: block;
-  border-color: #099e44;
-  background-color: #099e44;
-  text-align: center;
-  margin: 2%;
-  padding: 1%;
-  padding-left: 2%;
-  padding-right: 4%;
-  color: #fff;
-}
-
-.map {
-  float: right;
-  display: block;
-  height: 50px;
-  width: 50px;
-}
-
-h2 {
-  margin: 0%;
-}
-
-p {
-  margin: 0%;
-  font-size: 14px;
-  letter-spacing: 0px;
   width: 100%;
+  height: auto;
 }
 
-.address {
-  float: left;
-  clear: both;
-  color: #575757;
-  margin: 2%;
+.restaurantName h1 {
+  font-size: 18px;
+  line-height: 22px;
+  font-family: sans-serif;
+  font-weight: normal;
+  color: #000000;
+  -webkit-font-smoothing: antialiased;
 }
 
 .cuisines {
-  float: left;
-  clear: both;
-  color: #575757;
-  margin: 2%;
+  width: 100%;
+  height: auto;
 }
 
-.price {
-  font-family: arial;
-  float: left;
-  clear: both;
-  color: #575757;
-  margin: 2%;
+.cuisines p {
+  font-size: 12px;
+  line-height: 14px;
+  margin: 0%;
+  color: #545454;
+  font-family: sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+.rating-price {
+  width: 100%;
+  height: auto;
+  margin-top: 3%;
+}
+
+.rating {
+  display: inline-flex;
+  background-color: #f6f6f6;
+  align-items: center;
+  padding: 1px 6px;
+  margin-right: 3%;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+
+.rating p {
+  color: #000000;
+  font-size: 12px;
+  margin: 0;
+}
+
+.pricePerPerson {
+  display: inline-flex;
+  background-color: #f6f6f6;
+  align-items: center;
+  padding: 3px 6px;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+}
+
+.pricePerPerson p {
+  color: #000000;
+  font-size: 12px;
+  margin: 0;
+}
+
+.address {
+  width: 100%;
+  height: auto;
+  margin-top: 3%;
+}
+
+.address p {
+  font-size: 12px;
+  line-height: 14px;
+  margin: 0%;
+  color: #000000;
+  font-family: sans-serif;
+  -webkit-font-smoothing: antialiased;
+}
+
+.map {
+  width: 100%;
+  height: auto;
+  margin-top: 2%;
+}
+
+.map a {
+  display: inline-flex;
+  background-color: #f6f6f6;
+  align-items: center;
+  padding: 3px 6px;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  white-space: nowrap;
+}
+
+.map img {
+  width: 16px;
+  height: 20px;
+  margin-right: 5%;
+}
+
+.map p {
+  color: #000000;
+  font-size: 12px;
+  margin: 0;
 }
 
 .proceed-button {
-  font-family: arial;
-  width: 90%;
   text-align: center;
-  clear: both;
-  margin: 5%;
+  vertical-align: middle;
+  font-family: sans-serif;
+  width: auto;
+  padding: 2% 2%;
+  bottom: 0%;
+  border-radius: 7px;
+  cursor: pointer;
+  background-color: #ffffff;
+  border: 2px solid #000000;
+  box-shadow: 1px 2px #8d8d8d;
 }
 
-.proceed-button button {
-  background-color: #007bff;
+.proceed-button:hover {
+  background-color: #000000;
+}
+
+.proceed-button p {
+  color: #000000;
+  font-size: 18px;
+  margin: 0%;
+}
+
+.proceed-button p:hover {
   color: #fff;
-  padding: 2%;
-  padding-left: 7%;
-  padding-right: 7%;
-  border-radius: 10px;
-  font-size: 14px;
-  border: none;
-  margin-top: 5%;
-}
-
-.browse-button {
-  font-family: arial;
-  width: 90%;
-  text-align: center;
-  clear: both;
-  margin: 5%;
 }
 
 .browse-button button {
-  background-color: gray;
+  padding: 2%;
+  margin: 1% 0% 1% 7%;
+  background: #fff none repeat scroll 0 0;
+  color: #007bff;
+  border-radius: 7px;
+  border: 2px;
+  border-style: solid;
+  border-color: #007bff;
+  font-size: 14px;
+  cursor: pointer;
+  box-shadow: 1px 2px #8d8d8d;
+}
+
+.browse-button:hover button {
+  background: #007bff none repeat scroll 0 0;
   color: #fff;
-  padding: 1%;
-  padding-left: 10%;
-  padding-right: 10%;
-  font-size: 12px;
-  border-radius: 10px;
-  border: none;
-}
-
-::ng-deep .carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000000' viewBox='0 0 8 8'%3E%3Cpath d='M1.5 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
-}
-
-::ng-deep .carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
-}
-
-::ng-deep .carousel-indicators li {
-  background-color: #efefef;
-}
-::ng-deep .carousel-indicators .active {
-  background-color: #575757;
+  box-shadow: 0px 0px #007bff;
 }
