updated header for dynamic name and points, added getPointBalance intent for user, dialogflow sessions linked with userID from stateService

--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -2,7 +2,7 @@
   <img
     src="https://pbs.twimg.com/profile_images/960529625188220928/hDC7W9eq_400x400.jpg"
   />
-  <h1>US Bank</h1>
-  <h3>John Doe</h3>
-  <h4>Points: 12000</h4>
+  <h1>{{this._stateService.bankName}}</h1>
+  <h3>{{this._stateService.userFirstName}}</h3>
+  <h4>{{this._stateService.pointBalance}}</h4>
 </div>
