--- a/src/app/components/chatbot/chat-input/chat-input.component.html
+++ b/src/app/components/chatbot/chat-input/chat-input.component.html
@@ -5,8 +5,12 @@
     [(ngModel)]="_userInput"
     placeholder="Type your message here..."
     (keydown.enter)="SendUserInput()"
+    autofocus
   />
-  <button (click)="SendUserInput()">
-    Send
+  <button (click)="listen()" class="voice">
+    <img [src]="voiceButtonIcon">
+  </button>
+  <button (click)="SendUserInput()" class="text">
+    <img [src]="textButtonIcon">
   </button>
 </div>
