cancel booking feature made

--- a/src/app/components/chatbot/chat-input/chat-input.component.html
+++ b/src/app/components/chatbot/chat-input/chat-input.component.html
@@ -7,7 +7,7 @@
     (keydown.enter)="SendUserInput()"
     autofocus
   />
-  <button (click)="listen()" class="voice">
+  <button (click)="listenCheck()" class="voice">
     <img [src]="voiceButtonIcon">
   </button>
   <button (click)="SendUserInput()" class="text">
