--- a/src/app/modules/bookingsummarycard/bookingsummarycard.component.css
+++ b/src/app/modules/bookingsummarycard/bookingsummarycard.component.css
@@ -23,12 +23,13 @@
   bottom: 0%;
   cursor: pointer;
   border-radius: 5px;
-  background-color: red;
+  background-color: #f2dede;
+  border: 1px solid #ebccd1;
   box-shadow: 1px 2px #8d8d8d;
 }
 
 .points-error p {
-  color: #fff;
+  color: #a94442;
   font-size: 16px;
   margin: 0%;
 }
@@ -41,16 +42,12 @@
   padding: 2% 2%;
   bottom: 0%;
   cursor: pointer;
-  border-radius: 5px;
-  background-color: #dff0d8;
-  border: 1px solid #d6e9c6;
-  box-shadow: 1px 2px #8d8d8d;
   font-weight: bolder;
 }
 
-.booked p {
+.booked h1 {
   color: #3c763d;
-  font-size: 16px;
+  font-size: 18px;
   margin: 0%;
 }
 
@@ -62,16 +59,12 @@
   padding: 2% 2%;
   bottom: 0%;
   cursor: pointer;
-  border-radius: 5px;
-  background-color: #f2dede;
-  border: 1px solid #ebccd1;
-  box-shadow: 1px 2px #8d8d8d;
   font-weight: bolder;
 }
 
-.cancelled p {
+.cancelled h1 {
   color: #a94442;
-  font-size: 16px;
+  font-size: 18px;
   margin: 0%;
 }
 
