--- a/src/app/components/chatbot/chat-input/chat-input.component.css
+++ b/src/app/components/chatbot/chat-input/chat-input.component.css
@@ -1,14 +1,16 @@
 .input-block {
   width: 100%;
-  height: 10%;
-  bottom: 0;
+  min-height: 50px;
+  height: 8%;
   display: inline-block;
+  position: fixed;
+  bottom: 0;
   background-color: #007bff;
   border: none;
 }
 
 .inputWithMic {
-  width: 76%;
+  width: 80%;
   height: 96%;
   display: flex;
   align-items: center;
@@ -22,8 +24,9 @@
   border-radius: 30px 0px 0px 30px;
   border: none;
   border-width: 0ch;
-  width: 80%;
+  width: 90%;
   height: 40px;
+  padding: 2% 5%;
 }
 
 .voice {
@@ -40,8 +43,8 @@
 
 .voice img {
   border: none;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 70%;
+  max-height: 70%;
 }
 
 .send {
@@ -71,119 +74,151 @@
 @media screen and (min-width: 320px) {
   .header {
     width: 100%;
-    height: 20%;
+    height: 8%;
   }
   .text {
     width: 40px;
     height: 40px;
   }
+  .voice {
+    width: 40px;
+    height: 40px;
+  }
   .input-box {
     width: 80%;
-    padding: 2%;
+    height: 40px;
   }
 }
 
 @media screen and (min-width: 411px) {
   .input-block {
     width: 100%;
-    height: 10%;
+    height: 8%;
   }
   .text {
     width: 50px;
     height: 50px;
   }
+  .voice {
+    width: 50px;
+    height: 50px;
+  }
   .input-box {
     width: 80%;
-    padding: 2%;
+    height: 50px;
   }
 }
 
 @media screen and (min-width: 481px) {
   .input-block {
     width: 100%;
-    height: 10%;
+    height: 8%;
   }
   .text {
     width: 50px;
     height: 50px;
   }
+  .voice {
+    width: 50px;
+    height: 50px;
+  }
   .input-box {
     width: 80%;
-    padding: 2%;
+    height: 50px;
   }
 }
 
 @media screen and (min-width: 600px) {
   .input-block {
     width: 100%;
-    height: 10%;
+    height: 8%;
   }
   .text {
     width: 50px;
     height: 50px;
   }
+  .voice {
+    width: 50px;
+    height: 50px;
+  }
   .input-box {
     width: 80%;
-    padding: 2%;
+    height: 50px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .input-block {
     width: 100%;
-    height: 10%;
+    height: 8%;
   }
   .text {
     width: 50px;
     height: 50px;
   }
+  .voice {
+    width: 50px;
+    height: 50px;
+  }
   .input-box {
     width: 80%;
-    padding: 2%;
+    height: 50px;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .input-block {
     width: 100%;
-    height: 10%;
+    height: 8%;
   }
   .text {
     width: 40px;
     height: 40px;
   }
+  .voice {
+    width: 40px;
+    height: 40px;
+  }
   .input-box {
     width: 80%;
-    padding: 2%;
+    height: 40px;
   }
 }
 
 @media screen and (min-width: 1260px) {
   .input-block {
     width: 100%;
-    height: 10%;
+    height: 8%;
   }
   .text {
     width: 40px;
     height: 40px;
   }
+  .voice {
+    width: 40px;
+    height: 40px;
+  }
   .input-box {
     width: 80%;
-    padding: 2%;
+    height: 40px;
   }
 }
 
 @media screen and (min-width: 1281px) {
   .input-block {
     width: 100%;
-    height: 10%;
+    height: 8%;
   }
   .text {
     width: 40px;
     height: 40px;
   }
+  .voice {
+    width: 40px;
+    height: 40px;
+  }
   .input-box {
     width: 80%;
-    padding: 2%;
+    height: 40px;
   }
 }
