Added break work in text to wrap in text-bubbles functionality.

--- a/src/app/components/chatbot/chat-body/text-bubble/text-bubble.component.css
+++ b/src/app/components/chatbot/chat-body/text-bubble/text-bubble.component.css
@@ -6,6 +6,7 @@
 .user {
   float: right;
   max-width: 70%;
+  overflow-wrap: break-word;
   margin-right: 2%;
 }
 
@@ -23,6 +24,7 @@
 .bot {
   float: left;
   max-width: 70%;
+  overflow-wrap: break-word;
   margin-left: 2%;
 }
 
