--- a/src/app/modules/bookingsummarycard/bookingsummarycard.component.css
+++ b/src/app/modules/bookingsummarycard/bookingsummarycard.component.css
@@ -16,7 +16,7 @@
 
 .points-error {
   display: inline-block;
-  text-align: center;
+  text-align: left;
   vertical-align: middle;
   width: 100%;
   padding: 2% 2%;
