--- a/src/app/modules/header/header.component.html
+++ b/src/app/modules/header/header.component.html
@@ -5,12 +5,12 @@
     />
   </div>
   <div class="bankName">
-    <h4>{{ this._stateService.bankName }}</h4>
+    <h4>{{ bankName }}</h4>
   </div>
   <div class="user-details">
     <div class="details">
-      <p class="username">{{ this._stateService.userFirstName }}</p>
-      <p class="points">{{ this._stateService.pointBalance }}</p>
+      <p class="username">{{ userFirstName }}</p>
+      <p class="points">{{ pointBalance }}</p>
     </div>
   </div>
 </div>
